crates/texform-knowledge/tests/ui/argspec-invalid.stderr
error: invalid argspec literal at char 4: `?` is not supported for star or column annotations
 --> tests/ui/argspec-invalid.rs:4:22
  |
4 |     let _ = argspec!("m:C?");
  |                      ^^^^^^
