crates/texform-knowledge/tests/ui/argspec-invalid.rs
use texform_knowledge::argspec;

fn main() {
    let _ = argspec!("m:C?");
}
